# ut_tamarin

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ut_tamarin.cc
include/: app.h  bash_lemma_processor.h  cmd_parameters.h  default_lemma_job_generator.h  lemma_job.h  lemma_job_generator.h  lemma_name_reader.h  lemma_penetrator.h  lemma_processor.h  m4_theory_preprocessor.h  output_writer.h  penetration_lemma_job_generator.h  tamarin_config.h  tamarin_interface.h  terminator.h  theory_preprocessor.h  ut_tamarin_config.h  utility.h  verbose_lemma_processor.h
src/: app.cc  bash_lemma_processor.cc  default_lemma_job_generator.cc  lemma_job.cc  lemma_name_reader.cc  lemma_penetrator.cc  m4_theory_preprocessor.cc  main.cc  output_writer.cc  penetration_lemma_job_generator.cc  tamarin_config.cc  tamarin_interface.cc  terminator.cc  ut_tamarin.cc  ut_tamarin_config.cc  utility.cc  verbose_lemma_processor.cc
test/: test.sh  test_protocol.spthy  utt_config.json
